[Feat] Add unified evaluation script for MoM collection (#1156)
* feat: add unified eval script for MoM collection

Signed-off-by: ZohaibHassan16 <zohaib179949@gmail.com>

* docs: add usage instructions for mom eval script

Signed-off-by: ZohaibHassan16 <zohaib179949@gmail.com>

* feat: add local model support and batching

Signed-off-by: ZohaibHassan16 <zohaib179949@gmail.com>

* style: apply pre-commit formatting

Signed-off-by: ZohaibHassan16 <zohaib179949@gmail.com>

* fix: remove unused imports

Signed-off-by: ZohaibHassan16 <zohaib179949@gmail.com>

* feat: implement MoM script with real datasets

Signed-off-by: ZohaibHassan16 <zohaib179949@gmail.com>

* Refactor: Move registry and language constants to constants.py

Signed-off-by: ZohaibHassan16 <zohaib179949@gmail.com>

* feat: implement proper split fallback for custom datasets.

Signed-off-by: ZohaibHassan16 <zohaib179949@gmail.com>

---------

Signed-off-by: ZohaibHassan16 <zohaib179949@gmail.com>
Co-authored-by: Xunzhuo <bitliu@tencent.com>

--- a/src/training/model_eval/requirements.txt
+++ b/src/training/model_eval/requirements.txt
@@ -1,6 +1,29 @@
-openai>=1.0.0
+# Core utils
+tqdm>=4.60.0
+requests>=2.25.0
+
+# Data stuff
+
 numpy>=1.20.0
 pandas>=1.3.0
-requests>=2.25.0
 datasets>=2.10.0
-tqdm>=4.60.0
+
+# Hugging Face ecosystem (v. imp. !!!)
+transformers>=4.35.0    
+peft>=0.10.0           
+torch>=2.0.0    
+
+# Eval & metr
+
+scikit-learn>=1.3.0
+seqeval>=1.2.2
+
+# Vis
+matplotlib>=3.5.0
+seaborn>=0.11.0
+
+# Optional but very useful (logging, better error messages)
+rich>=13.0.0       
+
+# Optional: only if you plan to use OpenAI API fallback or something
+# openai>=1.0.0          # not used in current script
