feat(memory): add Agentic Memory support with Milvus storage (#1194)
* implement memory decision filter with tests

Signed-off-by: Yehudit Kerido <ykerido@ykerido-thinkpadp1gen7.raanaii.csb>

* Adding POC doc

Signed-off-by: Yehudit Kerido <ykerido@ykerido-thinkpadp1gen7.raanaii.csb>

* implement rewriting query

Signed-off-by: Yehudit Kerido <ykerido@ykerido-thinkpadp1gen7.raanaii.csb>

* memory injection implementation

Signed-off-by: Yehudit Kerido <ykerido@ykerido-thinkpadp1gen7.raanaii.csb>

* feat(memory): memory retrieval using milvus with threshold filter

Signed-off-by: Yehudit Kerido <ykerido@ykerido-thinkpadp1gen7.raanaii.csb>

* fix: run go mod tidy to fix dependency ordering

Signed-off-by: Yehudit Kerido <ykerido@ykerido-thinkpadp1gen7.raanaii.csb>

* feat(memory): memory retrieval using milvus with threshold filter

Signed-off-by: Yehudit Kerido <ykerido@ykerido-thinkpadp1gen7.raanaii.csb>

* feat(memory): memory retrieval using milvus with threshold filter

Signed-off-by: Yehudit Kerido <ykerido@ykerido-thinkpadp1gen7.raanaii.csb>

* feat(memory): memory retrieval using milvus with threshold filter

Signed-off-by: Yehudit Kerido <ykerido@ykerido-thinkpadp1gen7.raanaii.csb>

* implement fact extraction

Signed-off-by: Yehudit Kerido <ykerido@ykerido-thinkpadp1gen7.raanaii.csb>

* fix(config): move Extraction field from MemoryEmbeddingConfig to MemoryConfig

Signed-off-by: Yehudit Kerido <ykerido@ykerido-thinkpadp1gen7.raanaii.csb>

* feat: Implement memory retrieval integration

Signed-off-by: Yehudit Kerido <ykerido@ykerido-thinkpadp1gen7.raanaii.csb>

* feat(memory): implement deduplication logic

Implement memory deduplication system to prevent duplicate
memories by using semantic similarity comparison. The system
decides when to update existing memories vs creating new ones
based on configurable thresholds.

Changes:
- Add deduplication.go with FindSimilar() and
  CheckDeduplication() functions
- Add store.go interface for memory storage abstracti

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -491,6 +491,12 @@ decisions:
         configuration:
           enabled: true
           pii_types_allowed: []
+      - type: "memory"  # Per-decision memory config (overrides global)
+        configuration:
+          enabled: true
+          retrieval_limit: 5
+          similarity_threshold: 0.70
+          auto_store: false
 
 
 default_model: "qwen2.5:3b"
