--- a/src/vllm-sr/cli/templates/router-defaults.yaml
+++ b/src/vllm-sr/cli/templates/router-defaults.yaml
@@ -14,6 +14,45 @@ router_replay:
   ttl_seconds: 2592000     # 30 days retention (for persistent backends)
   async_writes: false      # Enable async writes for better performance
 
+# Agentic Memory Configuration
+# Cross-session memory that persists user facts, preferences, and context
+# Requires: Milvus for vector storage
+# Optional: LLM endpoint for query rewriting and fact extraction (via external_models)
+#
+# To enable memory:
+#   1. Set enabled: true
+#   2. Configure milvus.address
+#   3. (Optional) Add external_models with model_role "memory_rewrite" or "memory_extraction"
+#
+# Query rewriting and fact extraction are enabled by adding external_models with:
+#   - model_role: "memory_rewrite"    -> enables query rewriting
+#   - model_role: "memory_extraction" -> enables fact extraction
+# See external_models section below for examples.
+memory:
+  enabled: false  # Disabled by default - requires Milvus
+
+  # Auto-store extracted facts after each response
+  auto_store: false
+
+  # Milvus vector database for memory storage
+  milvus:
+    address: ""  # e.g., "localhost:19530" or "milvus-host:19530"
+    collection: "agentic_memory"
+    dimension: 384
+
+  # Embedding model for semantic similarity
+  embedding:
+    model: "all-MiniLM-L6-v2"
+    dimension: 384
+
+  # Memory retrieval settings
+  default_retrieval_limit: 5
+  default_similarity_threshold: 0.70
+
+  # Fact extraction runs every N conversation turns (default: 10)
+  # Only applies when memory_extraction external model is configured
+  extraction_batch_size: 10
+
 semantic_cache:
   enabled: true
   backend_type: "memory"  # Options: "memory", "milvus", or "hybrid"
@@ -110,9 +149,34 @@ feedback_detector:
   use_mmbert_32k: true
 
 # External models configuration
-# Used for advanced routing signals like preference-based routing via external LLM
-# Users can configure external models in their config to enable these features
-# Example:
+# Used for advanced features that require an external LLM endpoint:
+#   - model_role: "preference"         -> preference-based routing
+#   - model_role: "memory_rewrite"     -> query rewriting for memory search
+#   - model_role: "memory_extraction"  -> fact extraction from conversations
+#   - model_role: "guardrail"          -> external guardrail/safety model
+#
+# Example for memory features:
+# external_models:
+#   - llm_provider: "vllm"
+#     model_role: "memory_rewrite"      # Enables query rewriting
+#     llm_endpoint:
+#       address: "localhost"
+#       port: 8000
+#     llm_model_name: "qwen3"
+#     llm_timeout_seconds: 30
+#     max_tokens: 100                   # Max tokens for rewritten query
+#     temperature: 0.1                  # Low temperature for consistent output
+#   - llm_provider: "vllm"
+#     model_role: "memory_extraction"   # Enables fact extraction
+#     llm_endpoint:
+#       address: "localhost"
+#       port: 8000
+#     llm_model_name: "qwen3"
+#     llm_timeout_seconds: 30
+#     max_tokens: 500                   # Max tokens for extracted facts
+#     temperature: 0.1
+#
+# Example for preference-based routing:
 # external_models:
 #   - llm_provider: "vllm"
 #     model_role: "preference"
